--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,3 +1,10 @@
+
+@import "sinkkala/_bootstrap.min";
+@import "sinkkala/_style";
+@import "sinkkala/_header-1";
+
+
+/*
 @import "compass";
 @include global-reset;
 @include reset-html5;
@@ -8,3 +15,4 @@
 @import "base";
 @import "partials";
 @import "custom/styles";
+*/
