--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,6 +1,20 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 {% include head.html %}
 <body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
+
+{% include header.html %}
+
+<div id="page">
+	{{ content | expand_urls: root_url }}
+
+	{% include footer.html %}
+
+	<span class="backToTop"><a href="#top">back to top</a></span>
+</div>
+
+
+{% comment %}
+<!--
   <header role="banner">{% include header.html %}</header>
   <nav role="navigation">{% include navigation.html %}</nav>
   <div id="main">
@@ -10,5 +24,7 @@
   </div>
   <footer role="contentinfo">{% include footer.html %}</footer>
   {% include after_footer.html %}
+-->
+{% endcomment %}
 </body>
 </html>
