--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -9,8 +9,27 @@
 <h5 class="mobile_nav"><a href="javascript:void(0)">&nbsp;<span></span></a></h5>
 <!--end mobile navigation trigger-->
 
-<section class="container preheader"> 
-	
+<section class="container preheader">
+	<nav class="user clearfix"> <a href="/">Bed &amp; Breakfast Sinkkala</a></nav>
+	<ul class="language">
+		<a title="Suomi" href="/">
+    		<span class="flag-icon fi"></span> Suomi
+    	</a>
+		<a title="Svenska" href="/sv/">
+    		<span class="flag-icon sv"></span> Svenska
+    	</a>
+		<a title="по-русски" href="/ru/">
+    		<span class="flag-icon ru"></span> по-русски
+    	</a>
+		<a title="Deutch" href="/de/">
+    		<span class="flag-icon de"></span> Deutch
+    	</a>
+		<a title="English" href="/en/">
+    		<span class="flag-icon en"></span> English
+    	</a>
+	</ul>
+
+	{% comment %}
 	<!--this is the login for the user-->
 	<nav class="user clearfix"> <a href="login.html"><i class="icon-user"></i> Login</a> </nav>
 	<!--close user nav-->
@@ -30,6 +49,7 @@
 		<li><a class="socicon small dribbble" href="#" data-placement="bottom" title="Follow us on dribble"></a></li>
 		<li><a class="socicon small vimeo" href="#" data-placement="bottom" title="Follow us on Vimeo"></a></li>
 	</ul>
+	{% endcomment %}
 </section>
 
 <!-- begin .header-->
