--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,6 +4,7 @@
 @import "sinkkala/_bootstrap.min";
 @import "sinkkala/_style";
 @import "sinkkala/_header-1";
+@import "sinkkala/_lemmon-slider"
 
 
 /*
