--- a/source/_includes/after_footer.html
+++ b/source/_includes/after_footer.html
@@ -1,5 +1,16 @@
+<script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="/javascripts/libs/underscore.js"></script>
+<script type="text/javascript" src="/javascripts/libs/handlebars.js"></script>
+<script type="text/javascript" src="/javascripts/libs/lemmon-slider.js"></script>
+<script type="text/javascript" src="/javascripts/i18n/{{ page.lang }}.js"></script>
+<script type="text/javascript" src="/javascripts/sinkkala-util.js"></script>
+<script type="text/javascript" src="/javascripts/sinkkala-global.js"></script>
+<script type="text/javascript" src="/javascripts/frontpage.js"></script>
+
+{% comment %}
 {% include disqus.html %}
 {% include facebook_like.html %}
 {% include google_plus_one.html %}
 {% include twitter_sharing.html %}
 {% include custom/after_footer.html %}
+{% endcomment %}
