--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -10,8 +10,8 @@
 <!--end mobile navigation trigger-->
 
 <section class="container preheader">
-	<nav class="user clearfix"> <a href="/">Bed &amp; Breakfast Sinkkala</a></nav>
-	<ul class="language">
+	<nav class="user clearfix"> <a href="/">Mummola-majoitusta Porvoossa</a></nav>
+	<ul id="language" class="language">
 		<a title="Suomi" href="/">
     		<span class="flag-icon fi"></span> Suomi
     	</a>
